--- a/style.css
+++ b/style.css
@@ -6,8 +6,39 @@ body {
     height: 100vh;
 }
 
+h2 {
+    margin: 0;
+    padding: 0;
+}
+
+.dev{
+    display: flex;
+    flex-direction: row;
+}
+
+.dev p{
+    font-size: 12px;
+    margin: 0;
+    padding: 0;
+}
+
+.dev a{
+    font-size: 12px;
+    margin: 0;
+    padding: 0;
+}
+
+a:link { text-decoration: none; }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:active { text-decoration: none; }
+
 #calculator {
     text-align: center;
+}
+
+.s1 {
+    margin-top: 10px;
 }
 
 input[type="number"] {
@@ -17,11 +48,11 @@ input[type="number"] {
 }
 
 .input-container {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 
 .button {
     width: 100%;
-    padding: 12px;
-    font-size: 18px;
+    padding: 5px;
+    font-size: 16px;
 }
