--- a/style.css
+++ b/style.css
@@ -13,8 +13,6 @@ body {
     width: 30px;
     height: 30px;
     font-size: 16px;
-    color: #fff;
-    background-color: rgb(32,33,36);
     border: none;
     border-radius: 100%;
     cursor: pointer;
@@ -34,12 +32,10 @@ body {
     transform: rotate(180deg);
 }
 
-
 .light-mode {
     --background-color: #ffffff;
     --text-color: #000000;
 }
-
 
 .dark-mode {
     --background-color:rgb(32,33,36);
@@ -97,8 +93,8 @@ input[type="number"] {
 }
 
 .button {
-    color: #ffffff;
-    background-color: grey;
+    color: #000;
+    background-color: #f8f9fa;
     width: 90%;
     padding: 5px;
     font-size: 16px;
