--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,6 +14,9 @@ body {
     width: 30px;
     height: 30px;
     font-size: 16px;
+    text-align: center;
+    background-color: #f8f9fa;
+    color: #000000;
     border: none;
     border-radius: 100%;
     cursor: pointer;
